--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -28,7 +28,7 @@
     "./app/components/song-wheel/song-wheel.spec.ts",
     "./app/components/song-wheel/song-wheel.ts",
     "./app/models/options-model.ts",
-    "./app/models/song-model.ts",
+    "./app/models/songs-model.ts",
     "./app/options/options-detail.component.spec.ts",
     "./app/options/options-detail.component.ts",
     "./app/options/options-list.component.spec.ts",
