--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "rhythmos",
   "version": "0.0.0",
   "license": "MIT",
+  "contributors": [{
+    "name": "verbetam",
+    "email": "verbetam@gmail.com"
+  }],
   "angular-cli": {},
   "scripts": {
     "start": "ng server",
@@ -18,7 +22,8 @@
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.20",
-    "zone.js": "^0.6.4"
+    "zone.js": "^0.6.4",
+    "bonsai": "0.4.2"
   },
   "devDependencies": {
     "angular-cli": "0.0.*",
