--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -36,6 +36,8 @@
     "./app/options/options-root.component.ts",
     "./app/rhythmos.spec.ts",
     "./app/rhythmos.ts",
+    "./app/services/database-service/database-service.spec.ts",
+    "./app/services/database-service/database-service.ts",
     "./app/services/options-provider/mock-options.ts",
     "./app/services/options-provider/options-provider.spec.ts",
     "./app/services/options-provider/options-provider.ts",
