--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.20",
     "zone.js": "^0.6.4",
+    "requirejs": "^2.1.18",
     "bonsai": "0.4.2"
   },
   "devDependencies": {
