SSC reader and shared types

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -47,8 +47,18 @@
     "./app/services/song-provider/mock-songs.ts",
     "./app/services/song-provider/song-provider.spec.ts",
     "./app/services/song-provider/song-provider.ts",
+    "./app/services/ssc-service/ssc-parser.ts",
+    "./app/services/ssc-service/ssc-reader.spec.ts",
+    "./app/services/ssc-service/ssc-reader.ts",
+    "./app/shared/interfaces/chart.ts",
+    "./app/shared/interfaces/index.ts",
     "./app/shared/interfaces/option.ts",
     "./app/shared/interfaces/song.ts",
+    "./app/shared/interfaces/ssc.ts",
+    "./app/shared/types/difficulty-type.ts",
+    "./app/shared/types/index.ts",
+    "./app/shared/types/note-type.ts",
+    "./app/shared/types/steps-type.ts",
     "./app/song-wheel/song-wheel-root.component.ts",
     "app.ts",
     "typings.d.ts"
