--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,19 +5,19 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "mapRoot": "",
-    "module": "system",
+    "module": "commonjs",
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noImplicitAny": false,
     "outDir": "../dist/",
     "rootDir": ".",
     "sourceMap": true,
-    "sourceRoot": "/",
-    "target": "es5"
+    "target": "es5",
+    "inlineSources": true
   },
   "filesGlob": [
     "./app/**/*.ts",
-    "app.ts",
+    "main.ts",
     "typings.d.ts"
   ],
   "files": [
@@ -28,6 +28,8 @@
     "./app/components/song-detail/song-detail.ts",
     "./app/components/song-wheel/song-wheel.spec.ts",
     "./app/components/song-wheel/song-wheel.ts",
+    "./app/environment.ts",
+    "./app/index.ts",
     "./app/models/mock-songs.ts",
     "./app/models/options-model.ts",
     "./app/models/songs-model.ts",
@@ -47,9 +49,9 @@
     "./app/services/song-provider/mock-songs.ts",
     "./app/services/song-provider/song-provider.spec.ts",
     "./app/services/song-provider/song-provider.ts",
-    "./app/services/ssc-service/ssc-parser.ts",
     "./app/services/ssc-service/ssc-reader.spec.ts",
     "./app/services/ssc-service/ssc-reader.ts",
+    "./app/shared/index.ts",
     "./app/shared/interfaces/chart.ts",
     "./app/shared/interfaces/index.ts",
     "./app/shared/interfaces/option.ts",
@@ -60,7 +62,7 @@
     "./app/shared/types/note-type.ts",
     "./app/shared/types/steps-type.ts",
     "./app/song-wheel/song-wheel-root.component.ts",
-    "app.ts",
+    "main.ts",
     "typings.d.ts"
   ],
   "atom": {
