Project structure and file extensions

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -21,47 +21,54 @@
     "typings.d.ts"
   ],
   "files": [
-    "./app/components/main-menu/main-menu.spec.ts",
-    "./app/components/main-menu/main-menu.ts",
-    "./app/components/song-chart/song-chart.ts",
-    "./app/components/song-detail/song-detail.spec.ts",
-    "./app/components/song-detail/song-detail.ts",
-    "./app/components/song-wheel/song-wheel.spec.ts",
-    "./app/components/song-wheel/song-wheel.ts",
+    "./app/components/index.ts",
+    "./app/components/main-menu/main-menu.component.spec.ts",
+    "./app/components/main-menu/main-menu.component.ts",
+    "./app/components/song-chart/song-chart.component.ts",
+    "./app/components/song-detail/song-detail.component.spec.ts",
+    "./app/components/song-detail/song-detail.component.ts",
+    "./app/components/song-wheel/song-wheel.component.spec.ts",
+    "./app/components/song-wheel/song-wheel.component.ts",
     "./app/environment.ts",
     "./app/index.ts",
+    "./app/models/index.ts",
     "./app/models/mock-songs.ts",
-    "./app/models/options-model.ts",
-    "./app/models/songs-model.ts",
-    "./app/options/options-detail.component.spec.ts",
-    "./app/options/options-detail.component.ts",
-    "./app/options/options-list.component.spec.ts",
-    "./app/options/options-list.component.ts",
-    "./app/options/options-root.component.ts",
-    "./app/pipes/sort-objects-by.ts",
+    "./app/models/options.model.ts",
+    "./app/models/songs.model.ts",
+    "./app/pipes/index.ts",
+    "./app/pipes/sort-objects-by.pipe.ts",
     "./app/rhythmos.spec.ts",
     "./app/rhythmos.ts",
-    "./app/services/database-service/database-service.spec.ts",
-    "./app/services/database-service/database-service.ts",
+    "./app/routes/index.ts",
+    "./app/routes/options/index.ts",
+    "./app/routes/options/options-detail.component.spec.ts",
+    "./app/routes/options/options-detail.component.ts",
+    "./app/routes/options/options-list.component.spec.ts",
+    "./app/routes/options/options-list.component.ts",
+    "./app/routes/options/options-root.component.ts",
+    "./app/routes/song-wheel/index.ts",
+    "./app/routes/song-wheel/song-wheel-root.component.ts",
+    "./app/services/database-service/database.service.spec.ts",
+    "./app/services/database-service/database.service.ts",
+    "./app/services/index.ts",
     "./app/services/options-provider/mock-options.ts",
-    "./app/services/options-provider/options-provider.spec.ts",
-    "./app/services/options-provider/options-provider.ts",
+    "./app/services/options-provider/options-provider.service.spec.ts",
+    "./app/services/options-provider/options-provider.service.ts",
     "./app/services/song-provider/mock-songs.ts",
-    "./app/services/song-provider/song-provider.spec.ts",
-    "./app/services/song-provider/song-provider.ts",
-    "./app/services/ssc-service/ssc-reader.spec.ts",
-    "./app/services/ssc-service/ssc-reader.ts",
+    "./app/services/song-provider/song-provider.service.spec.ts",
+    "./app/services/song-provider/song-provider.service.ts",
+    "./app/services/ssc-service/ssc-reader.service.spec.ts",
+    "./app/services/ssc-service/ssc-reader.service.ts",
     "./app/shared/index.ts",
-    "./app/shared/interfaces/chart.ts",
-    "./app/shared/interfaces/index.ts",
-    "./app/shared/interfaces/option.ts",
-    "./app/shared/interfaces/song.ts",
-    "./app/shared/interfaces/ssc.ts",
+    "./app/shared/interfaces/chart.interface.ts",
+    "./app/shared/interfaces/index.interface.ts",
+    "./app/shared/interfaces/option.interface.ts",
+    "./app/shared/interfaces/song.interface.ts",
+    "./app/shared/interfaces/ssc.interface.ts",
     "./app/shared/types/difficulty-type.ts",
     "./app/shared/types/index.ts",
     "./app/shared/types/note-type.ts",
     "./app/shared/types/steps-type.ts",
-    "./app/song-wheel/song-wheel-root.component.ts",
     "main.ts",
     "typings.d.ts"
   ],
