--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -61,14 +61,14 @@
     "./app/services/ssc-service/ssc-reader.service.ts",
     "./app/shared/index.ts",
     "./app/shared/interfaces/chart.interface.ts",
-    "./app/shared/interfaces/index.interface.ts",
+    "./app/shared/interfaces/index.ts",
     "./app/shared/interfaces/option.interface.ts",
     "./app/shared/interfaces/song.interface.ts",
     "./app/shared/interfaces/ssc.interface.ts",
-    "./app/shared/types/difficulty-type.ts",
+    "./app/shared/types/difficulty.type.ts",
     "./app/shared/types/index.ts",
-    "./app/shared/types/note-type.ts",
-    "./app/shared/types/steps-type.ts",
+    "./app/shared/types/note.type.ts",
+    "./app/shared/types/steps.type.ts",
     "main.ts",
     "typings.d.ts"
   ],
