--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "rhythmos",
   "version": "0.0.1",
   "license": "MIT",
-  "contributors": [{
-    "name": "verbetam",
-    "email": "verbetam@gmail.com"
-  }],
+  "contributors": [
+    {
+      "name": "verbetam",
+      "email": "verbetam@gmail.com"
+    }
+  ],
   "angular-cli": {},
   "scripts": {
     "start": "ng server",
@@ -13,7 +15,8 @@
     "lint": "tslint \"src/**/*.ts\"",
     "format": "clang-format -i -style=file --glob=src/**/*.ts",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "test": "./node_modules/.bin/karma start config/karma.conf.js --browsers Chrome_travis_ci --single-run "
   },
   "dependencies": {
     "@angular/common": "2.0.0-rc.1",
@@ -39,6 +42,8 @@
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-phantomjs-launcher": "^0.2.3",
     "protractor": "^3.3.0",
     "ts-node": "^0.5.5",
     "tslint": "^3.6.0",
