--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "rhythmos",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url" : "https://github.com/verbetam/rhythmos"
+  },
   "license": "MIT",
   "contributors": [
     {
