Consolidated ssc and sm reader into sm services

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -54,15 +54,17 @@
     "./app/services/options-provider/mock-options.ts",
     "./app/services/options-provider/options-provider.service.spec.ts",
     "./app/services/options-provider/options-provider.service.ts",
+    "./app/services/sm-service/sm-reader.service.ts",
+    "./app/services/sm-service/ssc-reader.service.spec.ts",
+    "./app/services/sm-service/ssc-reader.service.ts",
     "./app/services/song-provider/mock-songs.ts",
     "./app/services/song-provider/song-provider.service.spec.ts",
     "./app/services/song-provider/song-provider.service.ts",
-    "./app/services/ssc-service/ssc-reader.service.spec.ts",
-    "./app/services/ssc-service/ssc-reader.service.ts",
     "./app/shared/index.ts",
     "./app/shared/interfaces/chart.interface.ts",
     "./app/shared/interfaces/index.ts",
     "./app/shared/interfaces/option.interface.ts",
+    "./app/shared/interfaces/sm.interface.ts",
     "./app/shared/interfaces/song.interface.ts",
     "./app/shared/interfaces/ssc.interface.ts",
     "./app/shared/types/difficulty.type.ts",
