--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -57,6 +57,7 @@
     "./app/services/sm-service/sm-reader.service.ts",
     "./app/services/sm-service/ssc-reader.service.spec.ts",
     "./app/services/sm-service/ssc-reader.service.ts",
+    "./app/services/sm-service/utils.ts",
     "./app/services/song-provider/mock-songs.ts",
     "./app/services/song-provider/song-provider.service.spec.ts",
     "./app/services/song-provider/song-provider.service.ts",
