Changed version to parse as number

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -57,10 +57,12 @@
     "./app/services/sm-service/sm-reader.service.ts",
     "./app/services/sm-service/ssc-reader.service.spec.ts",
     "./app/services/sm-service/ssc-reader.service.ts",
+    "./app/services/sm-service/utils.spec.ts",
     "./app/services/sm-service/utils.ts",
     "./app/services/song-provider/mock-songs.ts",
     "./app/services/song-provider/song-provider.service.spec.ts",
     "./app/services/song-provider/song-provider.service.ts",
+    "./app/shared/classes/song.class.ts",
     "./app/shared/index.ts",
     "./app/shared/interfaces/chart.interface.ts",
     "./app/shared/interfaces/index.ts",
