Added Song class and helper classes
  - Song: Represents a song, stores all data (indirectly) and can be built from
    either a Sm or Ssc interface from either reader.
  - SongMetadata: Hold simple data for a song. Is what will be dealt before
    expensive resources are needed.
  - SongData: Represents references to binary resources. Uses new BlobReference
    type.
  - SongCHart: Holds all data for a given chart.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -62,6 +62,14 @@
     "./app/services/song-provider/mock-songs.ts",
     "./app/services/song-provider/song-provider.service.spec.ts",
     "./app/services/song-provider/song-provider.service.ts",
+    "./app/shared/classes/index.ts",
+    "./app/shared/classes/song-chart.class.spec.ts",
+    "./app/shared/classes/song-chart.class.ts",
+    "./app/shared/classes/song-data.class.spec.ts",
+    "./app/shared/classes/song-data.class.ts",
+    "./app/shared/classes/song-metadata.class.spec.ts",
+    "./app/shared/classes/song-metadata.class.ts",
+    "./app/shared/classes/song.class.spec.ts",
     "./app/shared/classes/song.class.ts",
     "./app/shared/index.ts",
     "./app/shared/interfaces/chart.interface.ts",
@@ -70,6 +78,7 @@
     "./app/shared/interfaces/sm.interface.ts",
     "./app/shared/interfaces/song.interface.ts",
     "./app/shared/interfaces/ssc.interface.ts",
+    "./app/shared/types/blob-reference.type.ts",
     "./app/shared/types/difficulty.type.ts",
     "./app/shared/types/index.ts",
     "./app/shared/types/note.type.ts",
