Added sort charts pipe

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -24,7 +24,6 @@
     "./app/components/index.ts",
     "./app/components/main-menu/main-menu.component.spec.ts",
     "./app/components/main-menu/main-menu.component.ts",
-    "./app/components/song-chart/song-stage.component.ts",
     "./app/components/song-detail/song-detail.component.spec.ts",
     "./app/components/song-detail/song-detail.component.ts",
     "./app/components/song-stage/song-stage.component.ts",
@@ -37,6 +36,8 @@
     "./app/models/options.model.ts",
     "./app/models/songs.model.ts",
     "./app/pipes/index.ts",
+    "./app/pipes/sort-charts.pipe.spec.ts",
+    "./app/pipes/sort-charts.pipe.ts",
     "./app/pipes/sort-objects-by.pipe.ts",
     "./app/rhythmos.spec.ts",
     "./app/rhythmos.ts",
