Chart select and prettify song wheel

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -35,6 +35,12 @@
     "./app/models/mock-songs.ts",
     "./app/models/options.model.ts",
     "./app/models/songs.model.ts",
+    "./app/pipes/filter-charts.pipe.spec.ts",
+    "./app/pipes/filter-charts.pipe.ts",
+    "./app/pipes/format-difficulty.pipe.spec.ts",
+    "./app/pipes/format-difficulty.pipe.ts",
+    "./app/pipes/format-stepstype.pipe.spec.ts",
+    "./app/pipes/format-stepstype.pipe.ts",
     "./app/pipes/index.ts",
     "./app/pipes/sort-charts.pipe.spec.ts",
     "./app/pipes/sort-charts.pipe.ts",
